# vibe-engineer

./: .coverage  .gitignore  .gitmodules  .ve-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: article-continue.md  audit-intent.md  chunk-commit.md  chunk-complete.md  chunk-create.md  chunk-execute.md  chunk-implement.md  chunk-plan.md  chunk-rebase.md  chunk-review.md  chunk-update-references.md  chunks-resolve-references.md  cluster-rename.md  complete-chunk.md  create-chunk.md  decision-create.md  discover-subsystems.md  entity-episodic.md  entity-shutdown.md  entity-startup.md  friction-log.md  investigation-create.md  migrate-managed-claude-md.md  migrate-to-subsystems.md  narrative-compact.md  narrative-create.md  narrative-execute.md  orchestrator-inject.md  orchestrator-monitor.md  (+12 more)
agents/: chunk-executor.md  intent-auditor.md
commands/: audit-intent.md  chunk-commit.md  chunk-complete.md  chunk-create.md  chunk-demote.md  chunk-execute-all.md  chunk-execute.md  chunk-implement.md  chunk-plan.md  chunk-rebase.md  chunk-review.md  chunk-update-references.md  chunks-resolve-references.md  cluster-rename.md  decision-create.md  discover-subsystems.md  entity-episodic.md  entity-shutdown.md  entity-startup.md  friction-log.md  investigation-create.md  migrate-managed-claude-md.md  narrative-compact.md  narrative-create.md  narrative-execute.md  orchestrator-inject.md  orchestrator-investigate.md  orchestrator-monitor.md  orchestrator-submit-future.md  steward-changelog.md  steward-send.md  steward-setup.md  steward-watch.md  subsystem-discover.md  swarm-monitor.md  swarm-request-response.md  validate-fix.md  ve-status.md
docs/: claude_smoketest.md  cursor_smoketest.md
hooks/: hooks.json  session_start.sh
scripts/: migrate_artifact_names.py  verify_question_hook.py
site/: astro.config.mjs  package-lock.json  package.json
spot_test/: ENTITY.md
src/: artifact_manager.py  artifact_ordering.py  backreferences.py  chunk_demote.py  chunk_validation.py  chunks.py  cluster_analysis.py  cluster_rename.py  consolidation.py  constants.py  decision_migration.py  entities.py  entity_decay.py  entity_episodic.py  entity_from_transcript.py  entity_merge.py  entity_migration.py  entity_repo.py  entity_shutdown.py  entity_transcript.py  external_refs.py  external_resolve.py  friction.py  frontmatter.py  git_utils.py  integrity.py  investigations.py  migrations.py  models.py  narratives.py  project.py  repo_cache.py  reviewers.py  scratchpad.py  scratchpad_commands.py  source_files.py  state_machine.py  subsystems.py  symbols.py  sync.py  (+5 more)
tests/: conftest.py  test_artifact_copy_external.py  test_artifact_manager.py  test_artifact_manager_errors.py  test_artifact_ordering.py  test_artifact_promote.py  test_artifact_remove_external.py  test_backreferences.py  test_board_cli.py  test_board_client.py  test_board_config.py  test_board_crypto.py  test_board_e2e.py  test_board_invite.py  test_board_storage.py  test_chunk_activate.py  test_chunk_complete.py  test_chunk_demote.py  test_chunk_list.py  test_chunk_list_proposed.py  test_chunk_overlap.py  test_chunk_review_skill.py  test_chunk_scratchpad_cli.py  test_chunk_start.py  test_chunk_suggest_prefix.py  test_chunk_validate.py  test_chunk_validate_inject.py  test_chunks.py  test_cli_utils.py  test_cluster_list.py  test_cluster_rename.py  test_cluster_subsystem_prompt.py  test_config.py  test_daemon.py  test_decision_migration.py  test_dotenv_loader.py  test_entities.py  test_entity_attach_detach_cli.py  test_entity_canonical_clone.py  test_entity_claude_autoattach.py  (+163 more)
(+1844 files in other folders)
