[project]
name = "vibe-engineer"
version = "0.1.0"
description = "Documentation-driven development workflow tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "httpx>=0.27.0",
    "jinja2",
    "pydantic",
    "pyyaml",
    "scikit-learn",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
ve = "ve:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest",
]
