[project]
name = "vibe-engineer"
version = "0.2.0"
description = "Documentation-driven development workflow tooling"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Brian Taylor", email = "el.wansen@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "anthropic>=0.40.0",
    "base58>=2.1.0",
    "claude-agent-sdk>=0.1.44",
    "click>=8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jinja2",
    "pydantic",
    "psutil>=5.9",
    "pynacl>=1.5.0",
    "pyyaml",
    "scikit-learn",
    "starlette>=0.36.0",
    "uvicorn[standard]>=0.27.0",
    "tomli-w>=1.0.0",
    "websockets>=12.0",
]

[project.scripts]
ve = "ve:cli"

[project.urls]
Homepage = "https://veng.dev"
Repository = "https://github.com/netguy204/vibe-engineer"
Documentation = "https://veng.dev"
Issues = "https://github.com/netguy204/vibe-engineer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
